fix: added meta tags

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Alireza Sadraii's HomePage</title>
+    <meta name="description" content="Alireza Sadraii Rad's Personal Page">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Alireza Sadraii Rad">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alireza Sadraii Rad's HomePage</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
