fix: added mail link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
                     <img src="img/socials/soundcloud.png" height="20" alt="">
                 </a>
             </li>
+            <li>
+                <a href="mailto://sadraiiali@gmail.com" target="_blank">
+                    <img src="img/socials/mail.png" height="20" alt="">
+                </a>
+            </li>
         </ul>
     </div>
     <div class="info">
