fix: added mail link

--- a/index.html
+++ b/index.html
@@ -13,40 +13,42 @@
 <div class="v-container">
     <div class="links">
         <ul>
+
             <li>
                 <a href="https://keybase.io/sadraiiali"  target="_blank">
-                    <img src="img/socials/keybase.svg" height="20" alt="">
+                    <img src="img/socials/keybase.svg" height="20" alt="keybase">
                 </a>
             </li>
             <li>
                 <a href="https://t.me/thepiker" target="_blank">
-                    <img src="img/socials/telegram.svg" height="20" alt="">
+                    <img src="img/socials/telegram.svg" height="20" alt="telegram">
                 </a>
             </li>
             <li>
                 <a href="https://mastodon.social/web/accounts/1074221"  target="_blank">
-                    <img src="img/socials/mastodon.svg" height="20" alt="">
+                    <img src="img/socials/mastodon.svg" height="20" alt="mastodon">
                 </a>
             </li>
             <li>
                 <a href="https://instagram.com/sadraiiali" target="_blank">
-                    <img src="img/socials/instagram.svg" height="20" alt="">
+                    <img src="img/socials/instagram.svg" height="20" alt="instagram">
                 </a>
             </li>
             <li>
                 <a href="https://soundcloud.com/ali-sadraei" target="_blank">
-                    <img src="img/socials/soundcloud.png" height="20" alt="">
+                    <img src="img/socials/soundcloud.png" height="20" alt="soundcloud">
                 </a>
             </li>
             <li>
                 <a href="mailto://sadraiiali@gmail.com" target="_blank">
-                    <img src="img/socials/mail.png" height="20" alt="">
+                    <img src="img/socials/mail.svg" height="20" alt="mail">
                 </a>
             </li>
         </ul>
     </div>
     <div class="info">
-        <img src="img/alireza-sadraii.jpg" class="my-photo" height="250" width="250"/>
+        <img src="img/alireza-sadraii.jpg"
+             class="my-photo" height="250" width="250" alt="alireza sadraii rad"/>
         <h1>علیرضا صدرایی راد</h1>
     </div>
 
